REGRESSION (r266634): fast/selectors/text-field-selection-stroke-color.html and fast/selectors/text-field-selection-window-inactive-stroke-color.html are flaky failures with pixel noise https://bugs.webkit.org/show_bug.cgi?id=216394 <rdar://problem/68679551>

Reviewed by Tim Horton.

Source/WebKit:

In WebKitTestRunner, we reset the states and load about:blank page between tests. The resetting may cause some
activity state changes of web page, like WindowIsActive. Before r266634, these changes will be dispatched
quickly enough (before runloop waits or when runloop exits) to web process, so web process can do rendering with
updated activity state. After r266634, dispatch of the changes may be delayed (until CATransaction commits).
Page activity state can affect scrollability (in FrameView::computeScrollability()) and scrollability can affect
tiling size (in TileController::computeTileSize()). Different tilings may cause the tiny pixel difference we see
in the test results.

To fix this, create an SPI for sending out activity state updates in next runloop cycle and adopt it in WTR.

* UIProcess/API/C/WKPage.cpp:
(WKPageDispatchActivityStateUpdateForTesting):
* UIProcess/API/C/WKPagePrivate.h:
* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::dispatchActivityStateUpdateForTesting):
* UIProcess/WebPageProxy.h:

Tools:

Make sure activity state changes for window updates in resetStateToConsistentValues are dispatched in time.

* WebKitTestRunner/TestController.cpp:
(WTR::TestController::resetStateToConsistentValues):

LayoutTests:

Update test expectations as tests should be passing.

* platform/mac-wk2/TestExpectations:


Canonical link: https://commits.webkit.org/229522@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267284 268f45cc-cd09-0410-ab3c-d52691b4dbfc