Source/WebKit/UIProcess/WebPageProxy.h
@@ -900,6 +900,8 @@ public:
     void addActivityStateUpdateCompletionHandler(CompletionHandler<void()>&&);
 #endif // PLATFORM(COCOA)
 
+    void dispatchActivityStateUpdateForTesting();
+
     void changeFontAttributes(WebCore::FontAttributeChanges&&);
     void changeFont(WebCore::FontChanges&&);
 
